[package]
name = "wgpuTutorialCode"
version = "0.1.0"
edition = "2024"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dependencies]
anyhow = "1.0"
cgmath = "0.18"
winit = { version = "0.30", features = [ "android-native-activity"] }
wgpu = "29"
pollster = "0.4.0"
env_logger = "0.11"
log = "0.4.32"
bytemuck = { version = "1.24", features = [ "derive" ] }
tobj = { version = "4.0.3", default-features = false, features = [ "tokio", "async" ] }
fs_extra = "1.2"
instant = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
reqwest = { version = "0.13.4" }
web-sys = { version = "0.3.99", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg", "hdr"]
